[package]
name = "kelbi_connect_account_schedule_job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [
  "json",
  "rustls",
  "tokio-rustls",
], default-features = false }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
